# FrequentSubgraphMining

./: .gitignore  CMakeLists.txt  README.md  main.ipynb  result_demo.json
py_src/: Graph.py  LoadData.py
src/: DFSCode.h  Edge.h  Graph.h  Graph.py  LoadData.py  Vertex.h  main.cpp
